# edge-of-chaos

./: .env.defaults  .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  LICENSE  README.md  REPLICATION_BLUEPRINT.md  SURVIVAL_POLICY.md  agent.yaml.example  breaks-active.md  breaks-archive.md  discoverys.md  edge-memory.db  install.ps1  install.sh  models.env.example  prd.json  pyproject.toml  tags.md
.claude/: settings.json
autonomy/: autonomy-policy.md  capabilities.md  frontier.md  metrics.md  tradecraft.md  workflows.md
avatar/: identity.md
blog/: api_actions.py  api_dashboard.py  api_setup.py  app.py  blog-full-publish.sh  blog-publish.sh  capture-diffs.sh  changelog.md  consolidar-estado.sh  consolidate-state.sh  requirements.txt  services.py  setup_examples.py  validate.py
builds/: kuramoto-sync.html  langton-lambda.html
config/: CLAUDE.md.tpl  branding.py  branding.yaml.example  branding.yaml.tpl  capabilities.yaml.tpl  features.yaml.tpl  health-config.yaml.tpl  heartbeat.sh.tpl  interests.md.tpl  paths.py  paths.sh  post-skill.md  post-skill.md.tpl  postflight.yaml  postflight.yaml.tpl  pre-skill.md  pre-skill.md.tpl  preflight.yaml  preflight.yaml.tpl  runtime-routers.yaml  runtime-routers.yaml.tpl  strategy.md.tpl
docs/: MENTOR_CORE_V2.md  SETUP_GUIDE.md  TOOL_CONTRACT.md  blog-entry-voice-calibration-483.md  dashboard-threads-console.md  dispatch-cycle-v1.md  event-sourced-enforcement-migration.md  heartbeat-dispatch-guard.md  operator-pressure-ledger.md  phase1-shadow-observability.md  primitive-generation-pipeline.md
edge_core/: cli.py  (+18 more)
(+424 files in other folders)
